# suanming

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/skills/: skill_index.md
.github/skills/daoist-summary/: SKILL.md
.github/skills/dayun-liunian/: SKILL.md
.github/skills/wuxing-shengke/: SKILL.md
.github/skills/zhongnan-daoist/: SKILL.md
.github/workflows/: ci.yml
scripts/: calc_bazi.py
src/suanming/: __init__.py  ai.py  analysis.py  cli.py  elements.py  luck.py  pillars.py
tests/: test_elements.py  test_pillars.py
